2001-05-03  Dan Mueth  <dan@eazel.com>

	Updating Nautilus Release Notes to mention that anybody
	who builds or repackages Nautilus should make sure Medusa
	support isn't built in by accident.

	* help/nautilus-release-notes/C/nautilus-release-notes.sgml:

2001-05-03  Dan Mueth  <dan@eazel.com>

        Updates to Nautilus User Manual, including two new screenshots.

        * help/nautilus-user-manual/C/Makefile.am:
        * help/nautilus-user-manual/C/figures/help_num.png:
        * help/nautilus-user-manual/C/figures/news_num.png:
        * help/nautilus-user-manual/C/nautilus-user-manual.sgml:

2001-05-03  Zbigniew Chyla  <cyba@gnome.pl>

	* src/nautilus-theme-selector.c
	(install_theme_button_clicked_callback): Destroy fileselector after
	pressing escape key.

2001-05-02  Darin Adler  <darin@eazel.com>

	* src/file-manager/fm-directory-view.c:
	(key_press_event_callback), (bonobo_control_activate_callback):
	Hook up the delete key to move files to trash. Another feature
	requested by Miguel.
	
	* src/file-manager/nautilus-icon-view-ui.xml: Only show the F2 in
	the menu bar, not the right-click menu.

	* libnautilus-extensions/nautilus-icon-factory.c:
	(cache_icon_new), (load_specific_icon), (load_icon_for_scaling),
	(scale_icon), (get_icon_from_cache),
	(nautilus_icon_factory_get_pixbuf_for_icon),
	(load_icon_with_embedded_text): Tried to fix bug 8228, but
	failed. I still want to keep my changes. I'll get back to this
	tomorrow.
	
2001-05-02  Ramiro Estrugo  <ramiro@eazel.com>

	* nautilus.spec.in:
	Add ammonite requires dependency.
	
2001-05-02  Darin Adler  <darin@eazel.com>

	* src/file-manager/nautilus-icon-view-ui.xml: Added an F2 key
	equivalent for the Rename command because: 1) we didn't have a key
	equivalent here before, 2) F2 is what you use to do this on
	Windows, and 3) Miguel asked me to.

2001-05-02  John Sullivan  <sullivan@eazel.com>

	* src/file-manager/fm-directory-view.c:
	(open_scripts_folder_callback), (disconnect_script_handlers):
