@@ -1,3 +1,9 @@
+2001-05-03 John Fleck <jfleck@inkstain.net>
+
+	* components/help/converters/gnome-db2html2/sect-elements.c
+	improve support for <emphasis> tag to proporly support role="bold"
+	and role="strong" attributes with <B> but *no* <EM> tags
+
 2001-05-03  Dan Mueth  <dan@eazel.com>
 
 	Updating Nautilus Release Notes to mention that anybody
